[gd_scene load_steps=4 format=3 uid="uid://dtgxb781xg71n"]

[ext_resource type="Script" path="res://Scenes/CreateStory/character_panel.gd" id="1_6xd4s"]
[ext_resource type="FontFile" uid="uid://by5f3g50o62f3" path="res://Assets/Font/Roboto/Roboto-Bold.ttf" id="2_wu30q"]

[sub_resource type="LabelSettings" id="LabelSettings_3c2aa"]
font = ExtResource("2_wu30q")
font_size = 28
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="CharacterPanel" type="PanelContainer"]
custom_minimum_size = Vector2(350, 350)
anchors_preset = -1
anchor_right = 0.21875
anchor_bottom = 0.393333
offset_right = -350.0
offset_bottom = -354.0
script = ExtResource("1_6xd4s")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
label_settings = SubResource("LabelSettings_3c2aa")
horizontal_alignment = 1

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 327)
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget imperdiet libero. Praesent lacinia aliquet ex ut dictum. In viverra lacus vel faucibus tempus. Nulla in elit ante. Donec nec ante sagittis, ullamcorper nisi sit amet, volutpat mi. Nulla posuere enim magna, non egestas enim consectetur sit amet. Donec pharetra, magna vitae facilisis condimentum, tortor sem laoreet felis, nec vulputate ex mauris eu nibh.

"
autowrap_mode = 2
clip_text = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
